force-app/main/default/objects/box__Lead_Setting__c/fields/box__Account__c.field-meta.xml
<CustomField>
    <fullName>box__Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account</label>
    <type>Checkbox</type>
</CustomField>