force-app/main/default/objects/box__Lead_Setting__c/fields/box__Do_Not_Move__c.field-meta.xml
<CustomField>
    <fullName>box__Do_Not_Move__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Move</label>
    <type>Checkbox</type>
</CustomField>