force-app/main/default/objects/box__Lead_Setting__c/fields/box__opportunity__c.field-meta.xml
<CustomField>
    <fullName>box__opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>opportunity</label>
    <type>Checkbox</type>
</CustomField>